# GTapeCalc-Updated

./: README.md  config.h  meson.build
src/: AUTHORS  gtapecalc.c  gtc_application.c  gtc_application.h  gtc_calc.c  gtc_calc.h  gtc_callbacks.c  gtc_callbacks.h  gtc_dialogs.c  gtc_dialogs.h  gtc_main.c  gtc_menu.c  gtc_menu.h  gtc_prefs.c  gtc_prefs.h  gtc_print.c  gtc_print.h  gtc_types.h  gtc_ui.c  gtc_ui.h  gtc_utils.c  gtc_utils.h  gtc_window.c  gtc_window.h  main.c  meson.build
src/docs/en/: Makefile
src/docs/en/help/: gtc-1.html  gtc-2.html  gtc-3.html  gtc-4.html  index.html
src/pixmaps/: error.xpm  exclamation.xpm  question.xpm
src/resources/: gtc.gresource.xml
src/resources/css/: gtc_style.css  style.css
src/resources/ui/: gtapecalc.ui  gtc_window.ui  window.ui
ui/: style.css
